<resources>
    <string name="app_name">VOLO</string>
    <string name="action_settings">Settings</string>
    <string name="add_player_btn">Add player</string>
    <string name="start_game_btn">Start</string>
    <string name="type_of_random_volo">Type of random VOLOs</string>
    <string name="number_of_digits_in_roulette">Number of digits in roulette</string>
    <string name="continue_game">Continue</string>
    <string name="new_game">New game</string>
    <string name="players_name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_the_name">Please,enter the name</string>
    <string name="chose_the_gender">Please, chose the gender. This is need to random Volos </string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
