<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_player_ll"
    android:orientation="vertical">

    <EditText
        android:hint="@string/players_name"
        android:id="@+id/add_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
    <TextView
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/gender_rgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/male_rbtn"
            android:text="@string/male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/female_rbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"/>
    </RadioGroup>


    </LinearLayout>

