<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/players_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
        </android.support.v7.widget.RecyclerView>

        <Button
            android:text="@string/add_player_btn"
            android:id="@+id/add_player_btn"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <TextView
                android:text="@string/number_of_digits_in_roulette"
                android:textSize="25dp"
                android:id="@+id/number_of_digits_in_roulette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/digits_spinner"
                android:layout_alignParentLeft="true"/>
            <Spinner
                android:id="@+id/digits_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                >
            </Spinner>

            <TextView
                android:text="@string/type_of_random_volo"
                android:textSize="25dp"
                android:id="@+id/type_of_random_volo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number_of_digits_in_roulette"
                android:layout_toLeftOf="@+id/digits_spinner"
                android:layout_alignParentLeft="true"/>
            <Spinner
                android:id="@+id/type_volo_spinner"
                android:layout_below="@+id/number_of_digits_in_roulette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                >
            </Spinner>
        </RelativeLayout>

        <Button
            android:text="@string/start_game_btn"
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>